--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,14 @@
+html {
+    box-sizing: border-box;
+}
+
 body {
     font-family: "Roboto", sans-serif;
     background-color: #ffffff;
     margin: 0;
     color: #434455;
+    letter-spacing: 0.02em;
+    font-size: 16px;
 }
 
 
@@ -14,6 +20,7 @@ h5,
 h6,
 p {
     margin: 0;
+    padding: 0;
 }
 
 ul,
@@ -30,6 +37,9 @@ a {
 
 button {
     cursor: pointer;
+    border: none;
+    border-color: transparent;
+    padding: 0;
 }
 
 img {
@@ -45,7 +55,538 @@ img {
     padding: 0 15px;
 }
 
-/*header*/
+/* --- Базовш стилі (Mobile First - до 768px) --- */
+.container {
+    /* max-width: 767px; */
+    width: 100%;
+    max-width: 320px;
+    padding: 0 16px;
+    margin: 0 auto;
+}
+
+@media screen and ((min-width: 768px)) {
+    .container {
+        max-width: 768px;
+    }
+}
+
+@media screen and ((min-width: 1158px)) {
+    .container {
+        max-width: 1158px;
+        padding: 0 15px;
+    }
+}
+
+/* --- Кнопка бургер-меню --- */
+.mobile-menu-open-btn {
+    display: flex;
+    /* Показываем на мобильных */
+    align-items: center;
+    justify-content: center;
+    background-color: transparent;
+    border: none;
+    padding: 0;
+    margin: 0;
+    line-height: 0;
+    /* Убрать лишнюю высоту */
+}
+
+.mobile-menu-open-btn-icon {
+    stroke: #2f2f37;
+    /* Цвет иконки */
+}
+
+/* --- Мобильное меню --- */
+.mobile-menu {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #fff;
+    z-index: 999;
+    /* Выше всего, кроме модалки */
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+    transform: translateX(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    display: flex;
+    flex-direction: column;
+    padding: 72px 24px 40px 16px;
+    /* Отступы внутри меню */
+    overflow: auto;
+    /* Добавить скролл если контент не влезает */
+}
+
+.mobile-menu.is-open {
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
+    transform: translateX(0);
+}
+
+.mobile-menu-close-btn {
+    position: absolute;
+    top: 24px;
+    right: 24px;
+    width: 24px;
+    height: 24px;
+    background-color: #e7e9fc;
+    /* Фон кнопки закрытия */
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0;
+}
+
+.mobile-menu-close-icon {
+    fill: #2e2f42;
+}
+
+.mobile-menu-nav {
+    margin-bottom: auto;
+    /* Прижать навигацию к верху */
+}
+
+.mobile-nav-list {
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+}
+
+.mobile-nav-link {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mobile-nav-link:hover,
+.mobile-nav-link:focus {
+    color: #404bbf;
+}
+
+.mobile-nav-link.current {
+    color: #404bbf;
+}
+
+.mobile-menu-contacts {
+    margin-bottom: 48px;
+    /* Отступ до соцсетей */
+}
+
+.mobile-contacts-list {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+    /* Отступ между контактами */
+    align-items: flex-start;
+    /* Выравнивание по левому краю */
+}
+
+.mobile-contacts-link {
+    font-style: normal;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+/* Стили для телефона */
+.mobile-contacts-link.phone {
+    font-weight: 500;
+    /* Medium */
+    font-size: 24px;
+    /* Размер телефона */
+    line-height: 1.11;
+    /* 40px */
+    color: #4d5ae5;
+    /* Цвет телефона */
+}
+
+/* Стили для email */
+.mobile-contacts-link.email {
+    font-weight: 500;
+    /* Medium */
+    font-size: 20px;
+    /* Размер email */
+    line-height: 1.2;
+    /* 24px */
+    letter-spacing: 0.02em;
+    color: #434455;
+    /* Цвет email */
+}
+
+.mobile-contacts-link:hover,
+.mobile-contacts-link:focus {
+    color: #404bbf;
+}
+
+.mobile-contacts-link.phone:hover,
+.mobile-contacts-link.phone:focus {
+    color: #404bbf;
+}
+
+.mobile-social-list {
+    display: flex;
+    justify-content: flex-start;
+    /* Выравнивание иконок */
+    gap: 40px;
+    /* Отступ между иконками */
+    /* max-width: 328px; */
+    /* Ограничение ширины блока иконок */
+}
+
+.mobile-social-list .social-item {
+    /* Используем существующий класс */
+    width: 40px;
+    height: 40px;
+}
+
+.mobile-social-list .social-link {
+    /* Используем существующий класс */
+    width: 100%;
+    height: 100%;
+    background-color: #4d5ae5;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mobile-social-list .social-link:hover,
+.mobile-social-list .social-link:focus {
+    background-color: #404bbf;
+    /* Цвет ховера как у команды */
+}
+
+.mobile-social-list .social-icon {
+    /* Используем существующий класс */
+    fill: #f4f4fd;
+}
+
+
+/* ==========================================================================
+           Планшетные стили (от 768px)
+           ========================================================================== */
+@media screen and (min-width: 768px) {
+    .section {
+        padding-top: 96px;
+        padding-bottom: 96px;
+    }
+
+    /* --- Header --- */
+    .mobile-menu-open-btn {
+        display: none;
+        /* Скрыть бургер */
+    }
+
+    .header-block .container {
+        justify-content: flex-start;
+    }
+
+    .logo {
+        margin-right: 120px;
+    }
+
+    .main-nav-list {
+        display: flex;
+        /* Показать навигацию в хедере */
+    }
+
+    .contacts {
+        display: block;
+        /* Показать контакты в хедере */
+        margin-left: auto;
+    }
+
+    .contacts-list {
+        flex-direction: column;
+        gap: 5px;
+        align-items: flex-end;
+        /* Выравнивание вправо */
+    }
+
+    .contacts-link {
+        font-size: 12px;
+        line-height: 1.17;
+        letter-spacing: 0.04em;
+        padding: 0;
+        /* Убрать паддинги, если были */
+    }
+
+    /* --- Hero --- */
+    .hero {
+        padding: 112px 0;
+        max-width: 768px;
+        /* Убираем, т.к. фон должен тянуться */
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7),
+                rgba(46, 47, 66, 0.7)),
+            url(../images/people-office-table.jpg);
+        /* Фон для планшета */
+    }
+
+    .hero-title {
+        font-size: 56px;
+        line-height: 1.07;
+        max-width: 496px;
+        margin-bottom: 36px;
+    }
+
+    /* --- Features --- */
+    .features-list {
+        flex-direction: row;
+        flex-wrap: wrap;
+        gap: 72px 24px;
+        justify-content: flex-start;
+    }
+
+    .features-item {
+        flex-basis: calc((100% - 24px) / 2);
+        width: auto;
+    }
+
+    .features-title {
+        text-align: left;
+        font-size: 36px;
+        font-weight: 700;
+    }
+
+    .features-text {
+        font-weight: 500;
+    }
+
+    /* --- Team --- */
+    .team-block .container {
+        width: 552px;
+    }
+
+    .team-list {
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+        gap: 64px 24px;
+    }
+
+    .team-list-item {
+        flex-basis: calc((100% - 24px) / 2);
+        width: 264px;
+    }
+
+    /* --- Portfolio --- */
+    .portfolio-list {
+        flex-direction: row;
+        flex-wrap: wrap;
+        gap: 72px 24px;
+        justify-content: flex-start;
+    }
+
+    .portfolio-item {
+        flex-basis: calc((100% - 24px) / 2);
+        width: auto;
+        max-width: none;
+    }
+
+    /* --- Footer --- */
+    .footer-block .container {
+        width: 552px;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: flex-start;
+        align-items: baseline;
+        gap: 72px 24px;
+    }
+
+    .footer-block-logo,
+    .footer-block-icon {
+        text-align: left;
+        width: auto;
+        max-width: 264px;
+    }
+
+    .footer-subscribe {
+        text-align: left;
+    }
+
+    .text-footer {
+        margin-left: 0;
+    }
+
+    .footer-social-list {
+        justify-content: flex-start;
+    }
+
+    .footer-form {
+        flex-direction: row;
+        gap: 24px;
+        width: auto;
+        align-items: flex-start;
+    }
+
+    .footer-subscribe-label {
+        width: 264px;
+        max-width: none;
+    }
+
+    .footer-input {
+        width: 264px;
+    }
+
+    /* --- Modal --- */
+    .contact-form-container {
+        max-width: 408px;
+        padding: 72px 24px 24px 24px;
+    }
+}
+
+/* ==========================================================================
+           Десктопные стили (от 1158px)
+           ========================================================================== */
+@media screen and (min-width: 1158px) {
+    .section {
+        padding-top: 120px;
+        padding-bottom: 120px;
+    }
+
+    /* --- Header --- */
+    .logo {
+        margin-right: 76px;
+    }
+
+    .contacts-list {
+        flex-direction: row;
+        /* Контакты в ряд */
+        gap: 40px;
+    }
+
+    .contacts-link {
+        font-size: 16px;
+        /* Стандартный размер */
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        padding: 24px 0;
+    }
+
+    /* --- Hero --- */
+    .hero {
+        padding: 188px 0;
+        max-width: 1440px;
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7),
+                rgba(46, 47, 66, 0.7)),
+            url(../images/people-office-1.jpg);
+        /* Фон для десктопа */
+    }
+
+    .hero-title {
+        margin-bottom: 48px;
+    }
+
+    /* --- Features --- */
+    .features-img {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-color: #f4f4fd;
+        width: 264px;
+        height: 112px;
+        border-radius: 4px;
+        border: 1px solid #8e8f99;
+        margin-bottom: 8px;
+    }
+
+    .features-list {
+        flex-wrap: nowrap;
+        gap: 24px;
+        justify-content: space-between;
+    }
+
+    .features-item {
+        flex-basis: calc((100% - 3 * 24px) / 4);
+    }
+
+    .features-title {
+        font-size: 20px;
+        font-weight: 500;
+        line-height: 1.2;
+    }
+
+    .features-text {
+        font-weight: 400;
+    }
+
+    /* --- Team --- */
+    .team-block .container {
+        width: 1158px;
+    }
+
+    .team-list {
+        flex-wrap: nowrap;
+        gap: 24px;
+        justify-content: center;
+    }
+
+    .team-list-item {
+        flex-basis: calc((100% - 3 * 24px) / 4);
+        width: 264px;
+    }
+
+    .team-text-container {
+        padding: 32px 16px;
+    }
+
+    /* --- Portfolio --- */
+    .portfolio-list {
+        gap: 48px 24px;
+        justify-content: center;
+    }
+
+    .portfolio-item {
+        flex-basis: calc((100% - 2 * 24px) / 3);
+        width: auto;
+    }
+
+    /* --- Footer --- */
+    .footer-block .container {
+        width: 1158px;
+        flex-wrap: nowrap;
+        gap: 0;
+        align-items: baseline;
+    }
+
+    .footer-block-logo {
+        margin-right: 120px;
+        width: 264px;
+        text-align: left;
+    }
+
+    .footer-block-icon {
+        margin-right: 80px;
+        width: auto;
+        text-align: left;
+    }
+
+    .footer-subscribe {
+        margin-left: 0;
+        width: auto;
+        text-align: left;
+    }
+
+    .footer-form {
+        width: auto;
+    }
+
+    .footer-subscribe-label {
+        width: 264px;
+    }
+}
+
+/*------------------header--------------------*/
 
 .body-header {
     background: #FFFFFF;
